working bitfield to hex

--- a/float.html
+++ b/float.html
@@ -51,11 +51,11 @@
                 <br>
 
                 <div class="output">
-                    <div id="decimal">
-                        <input>
+                    <div>
+                        <input id="decimal">
                     </div>
-                    <div id="hexadecimal">
-                        <input maxlength="18">
+                    <div>
+                        <input id="hexadecimal" maxlength="18">
                     </div>
                 </div>
             </div>
