converter mostly working

--- a/float.html
+++ b/float.html
@@ -27,9 +27,9 @@
         <section>
             <div class="floats">
                 <div class="bitfield">
-                    <input class="hex" maxlength="1" onkeydown="return /[0-9a-fA-f]/.test(event.key)">
-                    <input class="hex" maxlength="1" onkeydown="return /[0-9a-fA-f]/.test(event.key)">
-                    <input class="hex" maxlength="1" onkeydown="return /[0-9a-fA-f]/.test(event.key)">
+                    <input class="sig" maxlength="1" onkeydown="return /[0-9a-fA-f]/.test(event.key)">
+                    <input class="exp" maxlength="1" onkeydown="return /[0-9a-fA-f]/.test(event.key)">
+                    <input class="exp" maxlength="1" onkeydown="return /[0-9a-fA-f]/.test(event.key)">
                     <input class="hex" maxlength="1" onkeydown="return /[0-9a-fA-f]/.test(event.key)">
 
                     <input class="hex" maxlength="1" onkeydown="return /[0-9a-fA-f]/.test(event.key)">
@@ -54,6 +54,7 @@
                     <div>
                         <input id="decimal">
                     </div>
+
                     <div>
                         <input id="hexadecimal" maxlength="18">
                     </div>
